@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Fix Reply-To header handling in Reply-All action (#1489037)
 - Fix so Sender: address is added to Cc: field on reply to all (#1489011)
 - Fix so addressbook_search_mode works also for group search (#1489079)
 - Fix removal of a contact from a group in LDAP addressbook (#1489081)
